test/pointer/fail/ptr_cl05.v3
//@execute (4, 4)=true; (0, 0)=true; (3, 4)=false; (-1, -2)=false
component ptr_cl05 {
	def aq: Array<int> = [11];
	def main(a: int, b: int) -> bool {
		var p = Pointer.atContents(aq);
		return p.add(a) == add(p.add, b);
	}
	def add(f: int -> Pointer, i: int) -> Pointer { return f(i); }
}
